# template_2D_SDL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: Game.h  Graphics.h  Input.h  Scroll.h  globals.h
src/: Game.cpp  Graphics.cpp  Input.cpp  Scroll.cpp  globals.cpp
